--- a/package.json
+++ b/package.json
@@ -16,6 +16,14 @@
       "prepare": "npm run build",
       "watch": "tsc --watch"
     },
+    "keywords": [
+      "mcp",
+      "salesforce",
+      "claude",
+      "ai"
+    ],
+    "author": "tsmztech",
+    "license": "MIT",
     "dependencies": {
       "@modelcontextprotocol/sdk": "0.5.0",
       "dotenv": "^16.3.1",
